Support Create Table As Select (#1702)

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -146,6 +146,8 @@ set(
     logical_query_plan/show_tables_node.hpp
     logical_query_plan/sort_node.cpp
     logical_query_plan/sort_node.hpp
+    logical_query_plan/static_table_node.cpp
+    logical_query_plan/static_table_node.hpp
     logical_query_plan/stored_table_node.cpp
     logical_query_plan/stored_table_node.hpp
     logical_query_plan/union_node.cpp
