File-Based TPC-DS Benchmark (#1716)
* Update README.md

* Update Jenkinsfile

* Add queries and table metadata

* added exemplary query for each 99 tpc-ds queries

* added exemplary query for each 99 tpc-ds queries

* removed unsupported queries

* removed .dic file

* implemented filebased version of tpcds benchmark

* .directory file removed

* minor change: table path modified

* allow verification option, removed use_predared_statements

* :see_no_evil: #2 Update .gitignore

* :truck: Move files

 #2

* :card_file_box: Add table metadata

 #2

* :art: Unify formatting of table metadata

 #2

* Close #2: Add table metadata (#15)

* Add queries and table metadata

* :see_no_evil: #2 Update .gitignore

* :truck: Move files

 #2

* :card_file_box: Add table metadata

 #2

* :art: Unify formatting of table metadata

 #2

* added queries with postgres dialect

* removed .directory file

* adapted query set: 26 hyrise-executable queries in postgres dialect

* :ambulance: Fix syntax of queries to make them executable by PostgreSQL

 #12

* :truck: Move fixed queries to own directory

 #12

* :fire: Remove unnecessary files

 #12

* fixed verification

* filled all_queries directory, removed queries which cannot be verified (45, 65, 79)

* added scale factor constraint, declared primary keys as primary keys for sqlite, minor improvements

* :pencil2: Minor spelling adjustments

 #12

* Update tpcds_benchmark.cpp

* :truck: Rename first 9 queries to be executed in correct order

 #12

* changed scale factor int to float

* column name comparison: case insensitive

* removed space after comma for function expression column names

* minor query 48 adaption

* :construction: Started implementing function stddev_samp

* added skeleton for STDDEV_SAMP

* continued implementation of stddev_samp

* STDDEV_SAMP added secondary_aggregate to AggregateResult

* Revert "STDDEV_SAMP

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -71,6 +71,17 @@ target_link_libraries(
     hyriseBenchmarkLib
 )
 
+# Configure hyriseBenchmarkTPCDS
+add_executable(hyriseBenchmarkTPCDS tpcds_benchmark.cpp)
+target_link_libraries(
+    hyriseBenchmarkTPCDS
+
+    hyrise
+    hyriseBenchmarkLib
+)
+
+add_dependencies(hyriseBenchmarkTPCDS dsdgen)
+
 # Configure hyriseBenchmarkJoinOrder
 add_executable(
     hyriseBenchmarkJoinOrder
