--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -573,6 +573,8 @@ set(
     utils/print_directed_acyclic_graph.hpp
     utils/scoped_locking_ptr.hpp
     utils/singleton.hpp
+    utils/sqlite_add_indices.cpp
+    utils/sqlite_add_indices.hpp
     utils/sqlite_wrapper.cpp
     utils/sqlite_wrapper.hpp
     utils/string_utils.cpp
