--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -10,6 +10,7 @@ set(
 set(
     HYRISE_UNIT_TEST_SOURCES
     ${SHARED_SOURCES}
+    benchmarklib/sqlite_add_indices_test.cpp
     benchmarklib/table_builder_test.cpp
     cache/cache_test.cpp
     concurrency/commit_context_test.cpp
