--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "third_party/tpcds-result-reproduction"]
 	path = third_party/tpcds-result-reproduction
 	url = https://github.com/hyrise-mp/tpcds-result-reproduction.git
+[submodule "third_party/tpcds-kit"]
+	path = third_party/tpcds-kit
+	url = https://github.com/hyrise-mp/tpcds-kit.git
