--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -567,6 +567,7 @@ set(
     utils/lossless_predicate_cast.cpp
     utils/lossless_predicate_cast.hpp
     utils/make_bimap.hpp
+    utils/meta_table_manager.hpp
     utils/null_streambuf.cpp
     utils/null_streambuf.hpp
     utils/pausable_loop_thread.cpp
