--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -186,6 +186,7 @@ set(
     utils/format_bytes_test.cpp
     utils/format_duration_test.cpp
     utils/lossless_predicate_cast_test.cpp
+    utils/meta_table_manager_test.cpp
     utils/plugin_manager_test.cpp
     utils/plugin_test_utils.cpp
     utils/plugin_test_utils.hpp
