--- a/resources/benchmark/tpcds/query_blacklist.cfg
+++ b/resources/benchmark/tpcds/query_blacklist.cfg
@@ -1,4 +1,4 @@
-01.sql
+#01.sql
 02.sql
 03.sql
 04.sql
@@ -31,7 +31,7 @@
 #28.sql
 #29.sql
 30.sql
-31.sql
+#31.sql
 32.sql
 33.sql
 #34.sql
@@ -82,9 +82,9 @@
 78.sql
 #79.sql
 80.sql
-81.sql
+#81.sql
 82.sql
-83.sql
+#83.sql
 84.sql
 85.sql
 86.sql
@@ -98,6 +98,6 @@
 94.sql
 95.sql
 #96.sql
-97.sql
+#97.sql
 98.sql
 #99.sql
