--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -325,32 +325,16 @@ set(
     scheduler/topology.hpp
     scheduler/worker.cpp
     scheduler/worker.hpp
-    server/client_connection.cpp
-    server/client_connection.hpp
-    server/postgres_wire_handler.cpp
-    server/postgres_wire_handler.hpp
-    server/query_response_builder.cpp
-    server/query_response_builder.hpp
+    server/buffer.cpp
+    server/buffer.hpp
+    server/hyrise_communication.cpp
+    server/network_message_types.hpp
+    server/postgres_handler.cpp
+    server/postgres_handler.hpp
     server/server.cpp
     server/server.hpp
-    server/server_session.cpp
-    server/server_session.hpp
-    server/task_runner.hpp
-    server/then_operator.hpp
-    server/types.hpp
-    server/use_boost_future.hpp
-    server/use_boost_future_impl.hpp
-
-    boost_server/buffer.cpp
-    boost_server/buffer.hpp
-    boost_server/hyrise_communication.cpp
-    boost_server/network_message_types.hpp
-    boost_server/postgres_handler.cpp
-    boost_server/postgres_handler.hpp
-    boost_server/server.cpp
-    boost_server/server.hpp
-    boost_server/session.cpp
-    boost_server/session.hpp
+    server/session.cpp
+    server/session.hpp
     sql/create_sql_parser_error_message.cpp
     sql/create_sql_parser_error_message.hpp
     sql/parameter_id_allocator.cpp
@@ -534,19 +518,6 @@ set(
     strong_typedef.hpp
     tasks/chunk_compression_task.cpp
     tasks/chunk_compression_task.hpp
-    tasks/server/abstract_server_task.hpp
-    tasks/server/bind_server_prepared_statement_task.cpp
-    tasks/server/bind_server_prepared_statement_task.hpp
-    tasks/server/create_pipeline_task.cpp
-    tasks/server/create_pipeline_task.hpp
-    tasks/server/execute_server_prepared_statement_task.cpp
-    tasks/server/execute_server_prepared_statement_task.hpp
-    tasks/server/execute_server_query_task.cpp
-    tasks/server/execute_server_query_task.hpp
-    tasks/server/load_server_file_task.cpp
-    tasks/server/load_server_file_task.hpp
-    tasks/server/parse_server_prepared_statement_task.cpp
-    tasks/server/parse_server_prepared_statement_task.hpp
 
     tasks/server/bind_prepared_statement_task.cpp
     tasks/server/bind_prepared_statement_task.hpp
@@ -554,8 +525,7 @@ set(
     tasks/server/execute_prepared_statement_task.hpp
     tasks/server/parse_prepared_statement_task.cpp
     tasks/server/parse_prepared_statement_task.hpp
-    tasks/server/pipeline_execution_task.cpp
-    tasks/server/pipeline_execution_task.hpp
+
     type_comparison.hpp
     types.cpp
     types.hpp
