--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -299,6 +299,8 @@ set(
     optimizer/strategy/insert_limit_in_exists_rule.hpp
     optimizer/strategy/join_ordering_rule.cpp
     optimizer/strategy/join_ordering_rule.hpp
+    optimizer/strategy/join_predicate_ordering_rule.cpp
+    optimizer/strategy/join_predicate_ordering_rule.hpp
     optimizer/strategy/predicate_placement_rule.cpp
     optimizer/strategy/predicate_placement_rule.hpp
     optimizer/strategy/predicate_reordering_rule.cpp
