--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -329,10 +329,13 @@ set(
     scheduler/worker.hpp
     server/buffer.cpp
     server/buffer.hpp
-    server/hyrise_communication.cpp
+    server/hyrise_communicator.cpp
+    server/hyrise_communicator.hpp
     server/network_message_types.hpp
     server/postgres_handler.cpp
     server/postgres_handler.hpp
+    server/response_builder.cpp
+    server/response_builder.hpp
     server/server.cpp
     server/server.hpp
     server/session.cpp
