--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -129,6 +129,7 @@ set(
     optimizer/strategy/strategy_base_test.hpp
     optimizer/strategy/subquery_to_join_rule_test.cpp
     scheduler/scheduler_test.cpp
+    server/buffer_test.cpp
     server/mock_connection.hpp
     server/mock_task_runner.hpp
     server/postgres_wire_handler_test.cpp
