Add tests and parallelization to synthetic table generator

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -204,6 +204,7 @@ set (
     ${SHARED_SOURCES}
     server/server_test_runner.cpp
     sql/sqlite_testrunner/sqlite_testrunner_encodings.cpp
+    synthetic_table_generator_test.cpp
     tpc/tpcds_db_generator_test.cpp
     tpc/tpch_test.cpp
     tpc/tpch_db_generator_test.cpp
