--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -330,8 +330,6 @@ set(
     scheduler/topology.hpp
     scheduler/worker.cpp
     scheduler/worker.hpp
-    server/buffer.cpp
-    server/buffer.hpp
     server/hyrise_communicator.cpp
     server/hyrise_communicator.hpp
     server/network_message_types.hpp
@@ -339,6 +337,8 @@ set(
     server/postgres_protocol_handler.hpp
     server/response_builder.cpp
     server/response_builder.hpp
+    server/ring_buffer.cpp
+    server/ring_buffer.hpp
     server/server.cpp
     server/server.hpp
     server/session.cpp
