fix clang errors

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -278,8 +278,7 @@ if (${ENABLE_JIT_SUPPORT})
         operators/jit_operator/specialization/jit_runtime_pointer_test.cpp
         operators/jit_operator/specialization/resolve_condition_test.cpp
         operators/jit_operator/specialization/modules/jit_code_specializer_test_module.cpp
-        operators/jit_operator/specialization/modules/jit_code_specializer_test_module.hpp
-        tasks/load_server_file_task_test.cpp)
+        operators/jit_operator/specialization/modules/jit_code_specializer_test_module.hpp)
 
     set(SYSTEM_TEST_SOURCES
         ${SYSTEM_TEST_SOURCES}
