--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -315,5 +315,5 @@ target_link_libraries(hyriseTest hyrise ${LIBRARIES})
 # Configure hyriseSystemTest
 add_executable(hyriseSystemTest ${SYSTEM_TEST_SOURCES})
 target_link_libraries(hyriseSystemTest hyrise hyriseBenchmarkLib ${LIBRARIES})
-target_link_libraries_system(hyriseSystemTest pqxx)
+target_link_libraries_system(hyriseSystemTest pqxx_static)
 target_compile_options(hyriseSystemTest PRIVATE -DPQXX_HIDE_EXP_OPTIONAL)
