--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -129,9 +129,10 @@ set(
     optimizer/strategy/strategy_base_test.hpp
     optimizer/strategy/subquery_to_join_rule_test.cpp
     scheduler/scheduler_test.cpp
-    server/ring_buffer_test.cpp
-    server/mock_connection.hpp
+    server/mock_socket.hpp
     server/postgres_protocol_handler_test.cpp
+    server/query_handler_test.cpp
+    server/ring_buffer_test.cpp
     server/server_session_test.cpp
     sql/sql_identifier_resolver_test.cpp
     sql/sql_pipeline_statement_test.cpp
