--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -130,6 +130,7 @@ set(
     optimizer/strategy/subquery_to_join_rule_test.cpp
     scheduler/scheduler_test.cpp
     server/mock_socket.hpp
+    server/postgres_protocol_handler_test.cpp
     server/query_handler_test.cpp
     server/ring_buffer_test.cpp
     sql/sql_identifier_resolver_test.cpp
