--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(
     operators/table_scan_benchmark.cpp
     operators/table_scan_sorted_benchmark.cpp
     operators/union_all_benchmark.cpp
+    ping_data_micro_benchmark.cpp
     tpch_data_micro_benchmark.cpp
     tpch_table_generator_benchmark.cpp
 )
