--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -332,21 +332,21 @@ set(
     scheduler/topology.hpp
     scheduler/worker.cpp
     scheduler/worker.hpp
-    server/client_connection.cpp
-    server/client_connection.hpp
-    server/postgres_wire_handler.cpp
-    server/postgres_wire_handler.hpp
-    server/query_response_builder.cpp
-    server/query_response_builder.hpp
-    server/server.cpp
-    server/server.hpp
-    server/server_session.cpp
-    server/server_session.hpp
-    server/task_runner.hpp
-    server/then_operator.hpp
-    server/types.hpp
-    server/use_boost_future.hpp
-    server/use_boost_future_impl.hpp
+#    server/client_connection.cpp
+#    server/client_connection.hpp
+#    server/postgres_wire_handler.cpp
+#    server/postgres_wire_handler.hpp
+#    server/query_response_builder.cpp
+#    server/query_response_builder.hpp
+#    server/server.cpp
+#    server/server.hpp
+#    server/server_session.cpp
+#    server/server_session.hpp
+#    server/task_runner.hpp
+#    server/then_operator.hpp
+#    server/types.hpp
+#    server/use_boost_future.hpp
+#    server/use_boost_future_impl.hpp
     sql/create_sql_parser_error_message.cpp
     sql/create_sql_parser_error_message.hpp
     sql/parameter_id_allocator.cpp
@@ -530,19 +530,19 @@ set(
     strong_typedef.hpp
     tasks/chunk_compression_task.cpp
     tasks/chunk_compression_task.hpp
-    tasks/server/abstract_server_task.hpp
-    tasks/server/bind_server_prepared_statement_task.cpp
-    tasks/server/bind_server_prepared_statement_task.hpp
-    tasks/server/create_pipeline_task.cpp
-    tasks/server/create_pipeline_task.hpp
-    tasks/server/execute_server_prepared_statement_task.cpp
-    tasks/server/execute_server_prepared_statement_task.hpp
-    tasks/server/execute_server_query_task.cpp
-    tasks/server/execute_server_query_task.hpp
-    tasks/server/load_server_file_task.cpp
-    tasks/server/load_server_file_task.hpp
-    tasks/server/parse_server_prepared_statement_task.cpp
-    tasks/server/parse_server_prepared_statement_task.hpp
+#    tasks/server/abstract_server_task.hpp
+#    tasks/server/bind_server_prepared_statement_task.cpp
+#    tasks/server/bind_server_prepared_statement_task.hpp
+#    tasks/server/create_pipeline_task.cpp
+#    tasks/server/create_pipeline_task.hpp
+#    tasks/server/execute_server_prepared_statement_task.cpp
+#    tasks/server/execute_server_prepared_statement_task.hpp
+#    tasks/server/execute_server_query_task.cpp
+#    tasks/server/execute_server_query_task.hpp
+#    tasks/server/load_server_file_task.cpp
+#    tasks/server/load_server_file_task.hpp
+#    tasks/server/parse_server_prepared_statement_task.cpp
+#    tasks/server/parse_server_prepared_statement_task.hpp
     type_comparison.hpp
     types.cpp
     types.hpp
@@ -608,8 +608,6 @@ set(
     uninitialized_vector
     lz4
     zstd
-    custom_jemalloc
-    ${FILESYSTEM_LIBRARY}
     ${Boost_CONTAINER_LIBRARY}
     ${Boost_SYSTEM_LIBRARY}
     ${Boost_THREAD_LIBRARY}
@@ -708,6 +706,33 @@ set(SOURCES ${SOURCES} ${PROVIDER_FILE})
 # Configure the regular hyrise library used for tests/server/playground...
 add_library(hyrise STATIC ${SOURCES})
 
+
+
+
+
+
+
+
+
+
+
+# target_precompile_headers(hyrise PUBLIC
+#   all_parameter_variant.hpp
+#   all_type_variant.hpp
+#   storage/create_iterable_from_segment.hpp
+#   storage/table.hpp
+#   types.hpp
+# )
+
+
+
+
+
+
+
+
+
+
 # -force_load/--whole-archive are necessary to include all symbols so that dynamically loaded plugins can use them
 if (APPLE)
     set_property(TARGET hyrise PROPERTY INTERFACE_LINK_LIBRARIES -force_load $<TARGET_FILE:hyrise>)
@@ -722,7 +747,7 @@ add_custom_target(resourceLink
 )
 
 # -rdynamic tells the linker to export the library's symbols so that plugins can use them.
-target_link_libraries(hyrise ${LIBRARIES} -rdynamic)
+target_link_libraries(hyrise PUBLIC ${LIBRARIES} INTERFACE custom_jemalloc -rdynamic)
 target_include_directories(hyrise PUBLIC ${CMAKE_BINARY_DIR})
 
 # -fPIC generates position independent code which is necessary because plugins might access hyrise functions.
