--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -130,10 +130,10 @@ set(
     optimizer/strategy/strategy_base_test.hpp
     optimizer/strategy/subquery_to_join_rule_test.cpp
     scheduler/scheduler_test.cpp
-    server/mock_connection.hpp
-    server/mock_task_runner.hpp
-    server/postgres_wire_handler_test.cpp
-    server/server_session_test.cpp
+#    server/mock_connection.hpp
+#    server/mock_task_runner.hpp
+#    server/postgres_wire_handler_test.cpp
+#    server/server_session_test.cpp
     sql/sql_identifier_resolver_test.cpp
     sql/sql_pipeline_statement_test.cpp
     sql/sql_pipeline_test.cpp
@@ -184,7 +184,7 @@ set(
     storage/variable_length_key_store_test.cpp
     storage/variable_length_key_test.cpp
     tasks/chunk_compression_task_test.cpp
-    tasks/load_server_file_task_test.cpp
+#    tasks/load_server_file_task_test.cpp
     tasks/operator_task_test.cpp
     testing_assert.cpp
     testing_assert.hpp
@@ -203,7 +203,7 @@ set(
 set (
     SYSTEM_TEST_SOURCES
     ${SHARED_SOURCES}
-    server/server_test_runner.cpp
+#    server/server_test_runner.cpp
     sql/sqlite_testrunner/sqlite_testrunner_encodings.cpp
     synthetic_table_generator_test.cpp
     tpc/tpcds_db_generator_test.cpp
@@ -294,7 +294,6 @@ set(
     gtest
     gmock
     sqlite3
-    ${FILESYSTEM_LIBRARY}
 )
 
 # This warning does not play well with SCOPED_TRACE
@@ -312,6 +311,10 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_executable(hyriseTest ${HYRISE_UNIT_TEST_SOURCES})
 add_dependencies(hyriseTest hyriseTestPlugin hyriseTestNonInstantiablePlugin)
 target_link_libraries(hyriseTest hyrise ${LIBRARIES})
+
+# target_precompile_headers(hyrise PUBLIC
+#     <gtest/gtest.h>
+# )
 
 # Configure hyriseSystemTest
 add_executable(hyriseSystemTest ${SYSTEM_TEST_SOURCES})
