--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -269,6 +269,8 @@ if (${ENABLE_JIT_SUPPORT})
         operators/jit_operator/operators/jit_expression_test.cpp
         operators/jit_operator/operators/jit_filter_test.cpp
         operators/jit_operator/operators/jit_limit_test.cpp
+        operators/jit_operator/operators/jit_mocks.cpp
+        operators/jit_operator/operators/jit_mocks.hpp
         operators/jit_operator/operators/jit_read_write_tuple_test.cpp
         operators/jit_operator/operators/jit_validate_test.cpp
         operators/jit_operator/operators/jit_write_reference_test.cpp
