--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -577,6 +577,8 @@ set(
     utils/plugin_manager.hpp
     utils/print_directed_acyclic_graph.hpp
     utils/scoped_locking_ptr.hpp
+    utils/segment_access_counter.cpp
+    utils/segment_access_counter.hpp
     utils/singleton.hpp
     utils/sqlite_add_indices.cpp
     utils/sqlite_add_indices.hpp
