Adds tests for SegmentAccessCounter

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -196,6 +196,7 @@ set(
     utils/plugin_test_utils.cpp
     utils/plugin_test_utils.hpp
     utils/column_ids_after_pruning_test.cpp
+    utils/segment_access_counter_test.cpp
     utils/singleton_test.cpp
     utils/string_utils_test.cpp
 )
