Upgrade to clang-9 (#1897)
* Upgrades to clang-9, so that OS X builds on the most current versions work again
* Brings in the two changes from #1881 that have the biggest effect on the linking time
* Another round of clang-tidy fixes
* Fixes a couple of threading issues, found by tsan

clang-tidy and tsan have really improved a lot in this release. I am still surprised at the complexity of problems now identified.

This is more hacky than I want it to be, mostly because boost is broken in two ways that are only identified by recent compilers. Unfortunately, Ubuntu is shipping with antique boost versions, so we need to do some backporting.

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -542,6 +542,7 @@ set(
     utils/abstract_plugin.hpp
     utils/aligned_size.hpp
     utils/assert.hpp
+    utils/boost_curry_override.hpp
     utils/check_table_equal.cpp
     utils/check_table_equal.hpp
     utils/column_ids_after_pruning.cpp
@@ -610,6 +611,10 @@ set(
     ${CMAKE_DL_LIBS}
 )
 
+if (NOT APPLE)
+    set(LIBRARIES ${LIBRARIES} atomic)
+endif()
+
 if (${ENABLE_NUMA_SUPPORT})
     set(LIBRARIES ${LIBRARIES} ${NUMA_LIBRARY} hpinuma_msource_s)
 endif()
@@ -635,7 +640,13 @@ add_custom_command (
 set(SOURCES ${SOURCES} ${PROVIDER_FILE})
 
 # Configure the regular hyrise library used for tests/server/playground...
-add_library(hyrise STATIC ${SOURCES})
+if(NOT ${ENABLE_COVERAGE} AND NOT APPLE AND NOT ENABLE_ADDR_UB_SANITIZATION AND NOT ENABLE_THREAD_SANITIZATION)
+    add_library(hyrise SHARED ${SOURCES})
+else()
+    # Use a static build for coverage information - otherwise .cpp files are missing from the report
+    # Also, the sanitizer builds on Mac require static linkage
+    add_library(hyrise STATIC ${SOURCES})
+endif() 
 
 # Work around an stdlibc++ bug, see list_directory.hpp for details
 set_source_files_properties(
