Segment Counters can now be configured as lockable

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -481,6 +481,8 @@ set(
     storage/run_length_segment/run_length_segment_iterable.hpp
     storage/segment_accessor.cpp
     storage/segment_accessor.hpp
+    storage/segment_access_statistics.cpp
+    storage/segment_access_statistics.hpp
     storage/segment_encoding_utils.cpp
     storage/segment_encoding_utils.hpp
     storage/segment_iterables/any_segment_iterable.cpp
