Fix multi-threading in GetTable

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -202,6 +202,7 @@ set(
 set (
     SYSTEM_TEST_SOURCES
     ${SHARED_SOURCES}
+    concurrency/stress_test.cpp
     server/server_test_runner.cpp
     sql/sqlite_testrunner/sqlite_testrunner_encodings.cpp
     synthetic_table_generator_test.cpp
