Link json library properly

--- a/src/cost_model_calibration/CMakeLists.txt
+++ b/src/cost_model_calibration/CMakeLists.txt
@@ -8,3 +8,5 @@ target_link_libraries(
         hyriseCostModelCalibrationLib
         hyriseBenchmarkLib
 )
+
+target_link_libraries_system(hyriseCostModelCalibration nlohmann_json::nlohmann_json)
