--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -655,7 +655,7 @@ target_include_directories(hyrise_impl PUBLIC ${CMAKE_BINARY_DIR})
 # Precompile the most expensive headers. Only add headers here if you know what you are doing, as this has the potential
 # of negatively affecting the build time.
 if(NOT ${CMAKE_VERSION} VERSION_LESS "3.16.0")
-    target_precompile_headers(hyrise_impl PUBLIC
+    target_precompile_headers(hyrise_impl PRIVATE # TODO
       all_parameter_variant.hpp
       storage/create_iterable_from_segment.hpp
       storage/table.hpp
